zeit.content.cp changes
=======================



0.50.2 (unreleased)
-------------------

- Use low-priority queue for publishing RSS feeds (#10037).


0.50.1 (2011-11-15)
-------------------

- Removed 4th topiclink


0.50.0 (2011-11-13)
-------------------

- Accomodated article to cope for the changed videos: videos are now full CMS
  objects and moved to zeit.content.video (for #8996)

- In den Metadaten für den Centerpage-Editor sind nun Felder für 4 sog. Topic-
  links (jeweils Linktext un URL) sowie ein Title-Feld (ohne Ticket)


0.43.3 (2011-06-23)
-------------------

- Compatibility fix for Firefox 5 (#9236).


0.43.2 (2011-06-22)
-------------------

- Compatibility fix for Firefox 5 (#9227).


0.43.1 (2011-03-24)
-------------------

- Bugfix: Raw-Modul im Aufmacher bekommt kein Layout mehr zugewiesen, das kann
  nämlich nicht funktionieren (#8844).

- is_published für Validation-Rules ignoriert NotPublishablePublishInfos
  (#8843).


0.43.0 (2011-03-23)
-------------------

- TeaserBockProxy adapts to ICommonMetadata now.

- Freie Teaser werden jetzt nur noch in der CP gespeichert. Es gibt keine extra
  Objekte im DAV mehr dafür (#7826)

- Das Raw-Modul kann jetzt auch im Aufmacher verwendet werden (#8781)

- Layout-Berechnung im Aufmacher korrigiert (#8844).


0.42.0 (2010-08-16)
-------------------

- Reichweite im CPE anzeigen (#7560).

- Für Teaserbilder wird als Fallback jetzt @@preview  verwendet (#7798).


0.41.0 (2010-08-09)
-------------------

- ``cms_content_iter`` funktioniert jetzt auch, wenn eine CP ein Modul enthält,
  welches das CMS nicht kennt (#7727).
- Für Selenium-Tests wird nun ``gocept.selenium`` verwendet (#7549).
- Auch gesperrte, oder anderweitig nicht auscheckbare Objekte, haben beim
  Bearbeiten einer Teaser-Liste jetzt das Icon "in neuem Fenster öffnen"
  (#7825).



0.40.0 (2010-07-07)
-------------------

- Warnung bei Änderungen, wenn ein freier Teaser zu einem Artikel existiert
  (#6415).


0.39.0 (2010-07-07)